--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ jobs:
   build:
     docker:
       - image: circleci/elixir:1.9
-
+    environment:
+      - MIX_ENV: test
     working_directory: ~/repo
     steps:
       - checkout
-
       - run: mix deps.get
-      - run: mix ecto.create
+      - run: mix compile --warnings-as-errors --force
       - run: mix test
