--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,4 @@
-# Elixir CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-elixir/ for more details
-version: 2
+version: 2.0
 jobs:
   build:
     docker:
@@ -11,6 +8,8 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
       - run: mix deps.get
       - run: mix compile --warnings-as-errors --force
       - run: mix test
