--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,9 @@ jobs:
       - run: mix deps.get
       - run: mix compile --warnings-as-errors --force
       - run: mix test
+      - store_test_results:
+        path: /tmp/basalt-test-results
+      - run: mix credo
+      - run: mix coveralls.json
+      - run: bash <(curl -s https://codecov.io/bash)
+      - run: MIX_ENV=docs mix inch.report
